finished nav styling, readme questions

--- a/index.html
+++ b/index.html
@@ -38,6 +38,9 @@
 
     <header class="intro">
        <!-- image code here -->
+       <div class="img-bus">
+        <img src="img/main-header.png">
+      </div>
 
       <h2>Lift Off</h2>
     
